Prefer the CRTC of the primary output for synchronization.

See https://bugs.freedesktop.org/show_bug.cgi?id=39696 .

Signed-off-by: Michel Dänzer <michel.daenzer@amd.com>